--- a/GzKitchen/AdiCO.csproj
+++ b/GzKitchen/AdiCO.csproj
@@ -159,11 +159,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Strings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Strings.resx</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="FormLogin.tr-CY.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLogin.tr-TR.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLogin.tr.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNavigationAdmin.tr.resx">
+      <DependentUpon>FormNavigationAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormNavigationChef.resx">
       <DependentUpon>FormNavigationChef.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,12 +208,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Properties\String.tr.resx" />
-    <EmbeddedResource Include="Properties\Strings.en.resx" />
-    <EmbeddedResource Include="Properties\Strings.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EntityDeploy Include="GzKitchenModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>GzKitchenModel.Designer.cs</LastGenOutput>
