--- a/GzKitchen/App.config
+++ b/GzKitchen/App.config
@@ -11,7 +11,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="GzKitchenEntities" connectionString="metadata=res://*/GzKitchenModel.csdl|res://*/GzKitchenModel.ssdl|res://*/GzKitchenModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MQMF9M2U\SQLEXPRESS01;initial catalog=GzKitchen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GzKitchenEntities" connectionString="metadata=res://*/GzKitchenModel.csdl|res://*/GzKitchenModel.ssdl|res://*/GzKitchenModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SEKA;initial catalog=GzKitchen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
